--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
  ##数据库连接信息
-spring.datasource.url=jdbc:oracle:thin:@//10.121.30.101:1521/PLUSGD
-spring.datasource.username=FMIS9999
-spring.datasource.password=FMIS9999
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 ##映射文件路径
 mybatis.mapper-locations=classpath:mapper/*Mapper.xml 
